2007-07-10  Luca Bruno  <lethalman88@gmail.com>

	* SConstruct: use syx/syx-config.h instead of config.h

	* Added support for infinite-precision numbers

	* syx/syx-object.h (SYX_CLASS_FINALIZATION): added

	* syx/syx-object.c (syx_object_free): added object finalization
	(syx_large_integer_new): added
	(syx_large_integer_new_integer): added
	(syx_large_integer_new_mpz): added

	* syx/syx-types.h (SYX_SMALL_INTEGER): fixed small integer unpacking

	* syx/syx-interp.c (syx_interp_send_binary): use of syx_int32 for primitives
	(syx_inter_send_unary): idem

	* SConscript: fixed readline detecting

	* plugins/gtk/plugin-init.c (SYX_FUNC_PRIMITIVE): fixed according to previous objects refactoring

	* syx/syx-init.c (syx_fetch_basic): fetch CPointer class

2007-07-09  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-parser.c (syx_parser_parse): push nil at the bottom of block context stack

	* st/kernel/String.st: added basic refinements

	* st/kernel/ByteArray.st: (byteAt:): added
	(byteAt:put:): added

	* syx/syx-primitives.c (ByteArray_at): return a small integer
	(ByteArray_at_put): require a small integer

	* syx/syx-init.h (SYX_INIT_MEMORY_SIZE): doubled initial memory size to 20000 objects

	* st/kernel/Bag.st: added

	* st/kernel/WriteStream.st: added

	* st/kernel/BlockClosure.st (value:value:): added

	* st/kernel/Dictionary.st (associationsDo:): added
	(do:): fixed to enumarate values
	(keysAndValuesDo:): added
	(keysDo:): added
	(select:, collect:, reject:): added for refinement

	* st/kernel/ArrayedCollection.st (select:, collect:, reject:): added for refinement

	* st/kernel/Collection.st (copyEmpty): added

	* syx/syx-parser.c (_syx_parser_parse_term): on error, print the expression if it's a string

	* st/kernel/IdentityDictionary.st: added

2007-07-06  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-error.c (syx_error_init): what a missing static

	* st/kernel/Dictionary.st: subclass Collection and remove hashTable variable
	